2023-04-14 Se agrega libreria fullcalendar.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -195,12 +195,10 @@
                                                     </li>
                                                     <li class="@(ViewBag.SegundoNivel == "IT_inventory_tipos_accesorios" ? "current-page" : null )"><a href="@Url.Action("index", "IT_inventory_tipos_accesorios")">Tipos de Accesorios</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "IT_Inventory_items_genericos" ? "current-page" : null )"><a href="@Url.Action("index", "IT_Inventory_items_genericos")">Hardware Gen&eacute;rico</a></li>
-
                                                 }
 
                                                 @if (User.IsInRole(TipoRoles.IT_ASIGNACION_HARDWARE))
                                                 {
-
                                                     <h3>Asignaci&oacute;n</h3>
                                                     <li class="@(ViewBag.SegundoNivel == "it_asignacion_hardware" ? "current-page" : null )"><a href="@Url.Action("index", "it_asignacion_hardware")">Asignaci&oacute;n a Usuarios</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "it_asignacion_hardware_responsivas" ? "current-page" : null )"><a href="@Url.Action("responsivas", "it_asignacion_hardware")">Responsivas</a></li>
@@ -217,6 +215,13 @@
                                                             <li class="@(ViewBag.TercelNivel == "IT_mantenimientos_checklist_item" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_mantenimientos_checklist_item")">Actividades </a></li>
                                                         </ul>
                                                     </li>
+                                                }
+
+                                                @if (User.IsInRole(TipoRoles.IT_NOTIFICACIONES))
+                                                {
+                                                    <h3>Recordatorios</h3>
+                                                    <li class="@(ViewBag.SegundoNivel == "it_notificaciones" ? "current-page" : null )"><a href="@Url.Action("index", "IT_notificaciones_actividad")">Recordatorios</a></li>
+                                                    
                                                 }
                                             </ul>
                                         </li>
@@ -256,6 +261,7 @@
 
                                         </li>
                                     }
+
                                     @if (User.IsInRole(TipoRoles.IT_INVENTORY))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "IT_epo_wsus" ? "active" : null )">
@@ -277,7 +283,7 @@
 
                                         </li>
                                     }
-
+                                   
 
                                     @if (User.IsInRole(TipoRoles.ADMIN))
                                     {
