--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/IniciarMatriz.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/IniciarMatriz.cshtml
@@ -149,11 +149,11 @@
                             <input type="hidden" id="id_internet_tipo" name="id_internet_tipo" value="1" /> //por defecto SÍ
                             <input type="hidden" id="id_matriz" name="id_matriz" value="@Model.id" />
 
-                            if (@ViewContext.RouteData.GetRequiredString("action").ToUpper() == "AUTORIZAR")
+                            if (Model.id>0)
                             {
                                 <input type="hidden" id="estatus" name="estatus" value="@Bitacoras.Util.IT_MR_Status.ENVIADO_A_IT" />
                             }
-                            else if (@ViewContext.RouteData.GetRequiredString("action").ToUpper() == "INICIARMATRIZ")
+                            else
                             {
                                 <input type="hidden" id="estatus" name="estatus" value="@Bitacoras.Util.IT_MR_Status.ENVIADO_A_JEFE" />
                             }
@@ -166,24 +166,24 @@
                             }
 
                             @*<div class="form-group row">
-                                <span style="color:black"><b>2.- JEFE DIRECTO</b></span>
-                                <br />
+                                    <span style="color:black"><b>2.- JEFE DIRECTO</b></span>
+                                    <br />
 
-                                <div id="advertencia_usuario" class="alert alert-danger col-md-12 col-sm-12" role="alert" style="display:none">
-                                    <i class="fa fa-warning" style="color:yellow"></i> <b>¡Advertencia!</b> <br />El Jefe Directo que seleccion&oacute; no tiene una cuenta asociada para el uso de este Portal, por esta raz&oacute;n no podr&aacute; autorizar esta solicitud. <br />
-                                    Favor de contactar al Administrador del Sitio para solicitar la generaci&oacute;n de los accesos necesarios.
-                                </div>
-                            </div>*@
+                                    <div id="advertencia_usuario" class="alert alert-danger col-md-12 col-sm-12" role="alert" style="display:none">
+                                        <i class="fa fa-warning" style="color:yellow"></i> <b>¡Advertencia!</b> <br />El Jefe Directo que seleccion&oacute; no tiene una cuenta asociada para el uso de este Portal, por esta raz&oacute;n no podr&aacute; autorizar esta solicitud. <br />
+                                        Favor de contactar al Administrador del Sitio para solicitar la generaci&oacute;n de los accesos necesarios.
+                                    </div>
+                                </div>*@
 
                             <div class="form-group row">
                                 @Html.LabelFor(model => model.id_jefe_directo, new { @class = "control-label col-md-1" })
-                                
+
                                 <div class="col-md-5 col-sm-5 ">
-                                   
+
                                     @if (Model.estatus == Bitacoras.Util.IT_MR_Status.ENVIADO_A_JEFE)
                                     {
                                         <input type="hidden" id="id_jefe_directo" name="id_jefe_directo" class="form-control" value="@Model.id_jefe_directo" />
-                                        @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @disabled="disabled" })
+                                        @Html.DropDownList("id_jefe_directo", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @disabled = "disabled" })
                                     }
                                     else
                                     {
@@ -192,8 +192,8 @@
                                     @Html.ValidationMessageFor(model => model.id_jefe_directo, "", new { @class = "text-danger" })
                                 </div>
                                 @*<div class="col-md-2 col-sm-2">
-                                    <button type="button" id="notificar-it-btn" class="btn btn-round btn-info btn-sm" style="display:none"><i class="fa-regular fa-envelope"></i> Notificar IT</button>
-                                </div>*@
+                                        <button type="button" id="notificar-it-btn" class="btn btn-round btn-info btn-sm" style="display:none"><i class="fa-regular fa-envelope"></i> Notificar IT</button>
+                                    </div>*@
                                 <label class="control-label col-md-1 col-sm-1" for="planta_jefe" style="text-align:right">Planta</label>
                                 <div class="col-md-3 col-sm-3">
                                     <input type="text" id="planta_jefe" class="form-control" value="@( Model.empleados1!=null && Model.empleados1.plantas!=null ? Model.empleados1.plantas.descripcion : "NO DISPONIBLE" )" readonly="readonly" />
@@ -430,18 +430,20 @@
                                     }
                                 }
 
-                            </div>
-
-                            <div class="ln_solid"></div>
-
-                            <div class="form-group row">
+                            </div><div class="ln_solid"></div><div class="form-group row">
                                 <span style="color:black"><b>COMENTARIOS ADICIONALES</b></span>
-                            </div>
-                            <div class="item form-group">
-                                <div class="col-md-12">
-                                    @Html.TextAreaFor(model => model.comentario, new { @class = "form-control", @rows = "5", @autocomplete = "off" })
-                                    @Html.ValidationMessageFor(model => model.comentario, "", new { @class = "text-danger" })
-                                </div>
+                            </div><div class="item form-group">
+                                      <div class="col-md-12">
+                                          @if (Model.id > 0)
+                                          {
+                                              @Html.TextAreaFor(model => model.comentario, new { @class = "form-control", @rows = "5", @autocomplete = "off", @required="required" })
+                                          }
+                                          else
+                                          {
+                                              @Html.TextAreaFor(model => model.comentario, new { @class = "form-control", @rows = "5", @autocomplete = "off" })
+                                          }
+                                          @Html.ValidationMessageFor(model => model.comentario, "", new { @class = "text-danger" })
+                                      </div>
                             </div>
                             <div class="ln_solid"></div>
 
