2023-04-16 Se corrige error de redireccionamiento al rechazar MR.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Details.cshtml
@@ -73,6 +73,18 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
+
+                        @if ((Model.estatus == Bitacoras.Util.IT_MR_Status.RECHAZADO) && !String.IsNullOrEmpty(Model.comentario_rechazo))
+                        {
+                            <div class="form-group row">
+                                <span style="color:black"><b> RAZ&Oacute;N DE RECHAZO</b></span>
+
+                                <div class="alert alert-danger col-md-12" role="alert">
+                                    <i class="fa fa-exclamation-triangle" style="color:yellow"></i> @Model.comentario_rechazo
+                                </div>
+                            </div>
+                        }
+
                         <div class="form-group row">
                             <!--Estado-->
                             <label class="control-label col-md-1" style="text-align: left;">
@@ -81,7 +93,7 @@
                             <div class="col-md-2">
                                 <input type="text" class="form-control col-md-12" style="text-align: right; font-weight: bold" value="@Bitacoras.Util.IT_MR_tipo.DescripcionStatus(Model.tipo).ToUpper()" readonly>
                             </div>
-                         <!--Estado-->
+                            <!--Estado-->
                             <label class="control-label col-md-6" style="text-align: right;">
                                 <b>Estado</b>
                             </label>
@@ -286,17 +298,17 @@
                         </div>
 
                         @*<div class="ln_solid"></div>
-                        <div class="form-group row">
-                            <span style="color:dimgrey"><b>&emsp; 3.3- INTERNET</b></span>
+        <div class="form-group row">
+            <span style="color:dimgrey"><b>&emsp; 3.3- INTERNET</b></span>
 
-                        </div>
+        </div>
 
-                        <div class="form-group row">
-                            @Html.LabelFor(model => model.id_internet_tipo, new { @class = "control-label col-md-2" })
-                            <div class="col-md-4 col-sm-4 ">
-                                <input type="text" id="id_internet_tipo" class="form-control" value="@(Model.IT_internet_tipo!=null ? Model.IT_internet_tipo.descripcion : "NO DISPONIBLE" )" readonly="readonly" />
-                            </div>
-                        </div>*@
+        <div class="form-group row">
+            @Html.LabelFor(model => model.id_internet_tipo, new { @class = "control-label col-md-2" })
+            <div class="col-md-4 col-sm-4 ">
+                <input type="text" id="id_internet_tipo" class="form-control" value="@(Model.IT_internet_tipo!=null ? Model.IT_internet_tipo.descripcion : "NO DISPONIBLE" )" readonly="readonly" />
+            </div>
+        </div>*@
 
                         <div class="ln_solid"></div>
                         <div class="form-group row">
